<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/enterDeposit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bahnschrift"
            android:hint="@string/Размер_вклада"
            android:textColor="#222222"
            android:textColorHint="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bahnschrift"
            android:textColor="#222222"
            android:textColorHint="#000000"
            android:textSize="44sp" />

        <TextView
            android:id="@+id/BarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:fontFamily="@font/bahnschrift"
            android:gravity="center"
            android:text="@string/Процентная_ставка"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/enterPercentsBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1.2"
            android:background="@drawable/clean_texture"
            android:max="2000"
            android:progress="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/listViewCapitalization"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bahnschrift"
            android:gravity="center"
            android:onClick="listPickCapitalization"
            android:text="@string/capitalization"
            android:textColor="@color/design_default_color_on_secondary" />

        <CheckBox
            android:id="@+id/earlyClose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="EarlyClose"
            android:text="@string/Досрочное_закрытие" />

        <CheckBox
            android:id="@+id/exemption"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="exemption"
            android:text="@string/Изъятие_Пополнение" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/listViewCurrency"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bahnschrift"
            android:gravity="center"
            android:onClick="listPickCurrency"
            android:textColor="@color/design_default_color_on_secondary">

        </TextView>

        <TextView
            android:id="@+id/date1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bahnschrift"
            android:gravity="center"
            android:hint="@string/Дата_начала_вклада"
            android:onClick="dataPick"
            android:textColor="@color/design_default_color_on_secondary" />

        <TextView
            android:id="@+id/date2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bahnschrift"
            android:gravity="center"
            android:hint="@string/Дата_окончания_вклада"
            android:onClick="dataPick"
            android:textColor="@color/design_default_color_on_secondary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/data_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bahnschrift"
                android:gravity="center"
                android:hint="@string/Количество_дней"
                android:textColor="@color/design_default_color_on_secondary"
                android:textColorHint="@color/design_default_color_on_secondary" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/day_background1" />

        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button7" />

        <ImageButton
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button8" />

        <ImageButton
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button9" />

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:cropToPadding="true"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button_clear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button4" />

        <ImageButton
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button5" />

        <ImageButton
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/button6" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="#00000000"
            android:cropToPadding="true"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button_back"
            android:text="@string/arrow" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button1" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button2" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button3" />

        <ImageButton
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button_dot" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/button0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button0" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/compute_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:background="#00000000"
            android:cropToPadding="false"
            android:onClick="onButtonsClick"
            android:scaleType="centerInside"
            android:src="@drawable/button_result_2s" />

    </LinearLayout>

</LinearLayout>


