<resources>
    <!-- Название приложения -->
    <string name="app_name">Client 0.1.8</string>

    <!-- Для интерфейса -->
    <string name="menu_title">Информация об устройстве</string>
    <string name="menu_part_title">О приложении</string>
    <string name="_192_168_0_100">192.168.0.100</string>
    <string name="name">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="guest">Гость</string>
    <string name="settings">Настройки</string>
    <string name="server_address_hint">Адрес сервера</string>
    <string name="server_port_hint">Порт сервера</string>
    <string name="_8080">8080</string>
    <string name="save">Сохранить</string>
    <string name="calculator">Калькулятор</string>
    <string name="arrow"><![CDATA[<]]></string>
    <string name="capitalization">Капитализация</string>
    <string name="headDeposit">Размер вклада:\u0020</string>

    <string name="Процентная_ставка">Процентная ставка:\u0020</string>
    <string name="Размер_вклада">Размер вклада</string>
    <string name="Досрочное_закрытие">Досрочное\nЗакрытие</string>
    <string name="Изъятие_Пополнение">Изъятие\nПополнение</string>
    <string name="Дата_начала_вклада">Дата\nначала\nвклада</string>
    <string name="Дата_окончания_вклада">Дата\nокончания\nвклада</string>
    <string name="Количество_дней">Количество\nдней</string>
    <string name="crocodev_inc">CrocoDev inc.</string>
    <string name="croco">croco</string>
    <string name="doge">doge</string>
    <string name="Логин">Логин</string>
    <string name="Пароль">Пароль</string>
    <string name="История_запросов">История запросов</string>
    <string name="Адрес_сервера">Адрес сервера</string>
    <string name="Порт_сервера">Порт сервера</string>

</resources>