<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme"
    tools:openDrawer="start">

...
            android:layout_height="wrap_content"
            android:text="@string/Адрес_сервера"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="auto"
            android:hint="@string/server_address_hint"
            android:text="@string/_192_168_0_100"
...
